--- a/package.json
+++ b/package.json
@@ -1,26 +1,40 @@
 {
-  "name": "webpack_example",
+  "name": "test3",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
+  "type": "module",
   "scripts": {
-    "start": "webpack serve --hot --open",
-    "build": "webpack -c webpack.config.js",
-    "build-prod": "webpack -c webpack.config.prod.js",
+    "dev": "gulp",
+    "build": "gulp build --build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "ed",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.5.1",
-    "mini-css-extract-plugin": "^2.4.6",
-    "node-sass": "^7.0.1",
-    "sass": "^1.46.0",
-    "sass-loader": "^12.4.0",
-    "webpack": "^5.64.3",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
-  },
-  "dependencies": {}
+    "browser-sync": "^2.29.3",
+    "del": "^7.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-file-include": "^2.3.0",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-pug": "^5.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.4",
+    "gulp-sass": "^5.1.0",
+    "gulp-version-number": "^0.2.4",
+    "gulp-webp": "^4.0.1",
+    "gulp-webp-html-nosvg": "^1.1.1",
+    "gulp-webpcss": "^1.1.1",
+    "sass": "^1.69.3",
+    "webp-converter": "^2.2.3",
+    "webpack": "^5.89.0",
+    "webpack-stream": "^7.0.0"
+  }
 }
